--- a/fillings.html
+++ b/fillings.html
@@ -17,10 +17,15 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="fillings.html">Fillings</a></li>
-                <li><a href="braces.html">Braces</a></li>
-                <li><a href="rct.html">About Us</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li>
+                    <a href="#services">Services</a>
+                    <ul class="dropdown">
+                      <li><a href="fillings.html">Fillings</a></li>
+                      <li><a href="braces.html">Braces</a></li>
+                      <li><a href="rct.html">RCT</a></li>
+                    </ul>
+                  </li>
                 <li><a href="#contact">Contact Us</a></li>
             </ul>
         </nav>
