--- a/rct.html
+++ b/rct.html
@@ -1,33 +1,119 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Aarthy's Dentistry</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>RCT - Aarthy's Dentistry</title>
+    <link rel="stylesheet" href="styles.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:wght@200&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
     <header>
-        <h1>Aarthy's Dentistry</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="fillings.html">Fillings</a></li>
-                <li><a href="braces.html">Braces</a></li>
-                <li><a href="rct.html">About Us</a></li>
-                <li><a href="#testimonials">Testimonials</a></li>
-                <li><a href="#contact">Contact Us</a></li>
+      <h1>Aarthy's Dentistry</h1>
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="aboutus.html">About Us</a></li>
+          <li>
+            <a href="#services">Services</a>
+            <ul class="dropdown">
+              <li><a href="fillings.html">Fillings</a></li>
+              <li><a href="braces.html">Braces</a></li>
+              <li><a href="rct.html">RCT</a></li>
             </ul>
-        </nav>
+          </li>
+          <li><a href="#contact">Contact Us</a></li>
+        </ul>
+      </nav>
     </header>
 
     <main>
-        <h2>About Aarthy's Dentistry</h2>
-        <p>Welcome to Aarthy's Dentistry! We are committed to providing high-quality dental care in a friendly and comfortable environment. Our experienced team is here to take care of your dental needs.</p>
+      <h2>About Aarthy's Dentistry</h2>
+      <p>
+        Welcome to Aarthy's Dentistry! We are committed to providing
+        high-quality dental care in a friendly and comfortable environment. Our
+        experienced team is here to take care of your dental needs.
+      </p>
     </main>
 
-    <footer>
-        <p>&copy; 2024 Aarthy's Dentistry. All rights reserved.</p>
+    <footer id="contact">
+      <div class="footer-container">
+        <!-- First Row -->
+        <div class="footer-row">
+          <!-- Contact Section -->
+          <div class="footer-section contact">
+            <h3>Contact</h3>
+            <p>
+              Address: 1/1, R.K.R Nagar, 1st Main Rd, Poompuhar Nagar, Chennai,
+              Tamil Nadu 600099
+            </p>
+            <p>Phone: +91 8939 299 288</p>
+            <p>
+              Email:
+              <a href="mailto:info@aarthysdentistry.in"
+                >info@aarthysdentistry.in</a
+              >
+            </p>
+          </div>
+
+          <!-- Quick Links Section -->
+          <div class="footer-section quick-links">
+            <h3>Quick Links</h3>
+            <ul>
+              <li><a href="#services">Services</a></li>
+              <li><a href="#testimonials">Testimonials</a></li>
+              <li><a href="#map">Find Us</a></li>
+              <li><a href="#contact">Contact Us</a></li>
+            </ul>
+          </div>
+        </div>
+
+        <!-- Second Row -->
+        <div class="footer-row">
+          <!-- Timings Section -->
+          <div class="footer-section timings">
+            <h3>Timings</h3>
+            <p>Mon - Fri: 9:00 AM - 7:00 PM</p>
+            <p>Sat: 10:00 AM - 5:00 PM</p>
+            <p>Sun: Closed</p>
+          </div>
+
+          <!-- Follow Us Section -->
+          <div class="footer-section social-icons">
+            <h3>Follow Us</h3>
+            <div class="social-icons-inner">
+              <a
+                href="https://www.facebook.com/profile.php?id=61565575555432"
+                target="_blank"
+                class="social-icon"
+                ><i class="fab fa-facebook-f"></i
+              ></a>
+              <a href="https://twitter.com" target="_blank" class="social-icon"
+                ><i class="fab fa-twitter"></i
+              ></a>
+              <a
+                href="https://www.instagram.com/aarthys_dentistry/"
+                target="_blank"
+                class="social-icon"
+                ><i class="fab fa-instagram"></i
+              ></a>
+              <a href="https://linkedin.com" target="_blank" class="social-icon"
+                ><i class="fab fa-linkedin-in"></i
+              ></a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p class="footer-copyright">
+        &copy; 2024 Aarthy's Dentistry. All rights reserved.
+      </p>
     </footer>
-</body>
+  </body>
 </html>
