--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
     </header>
 
-    <main>
+    <main id="index-main">
       <section class="hero">
         <div class="overlay"></div>
         <div class="content">
