--- a/fillings.html
+++ b/fillings.html
@@ -37,13 +37,13 @@
               <li><a href="rct.html">RCT</a></li>
             </ul>
           </li>
-          <li><a href="#contact">Contact Us</a></li>
+          <li><a href="contact.html">Contact Us</a></li>
         </ul>
       </nav>
     </header>
 
     <main id="about-main">
-      <section class="about-hero"></section>
+      <section class="filling-hero"></section>
       <h2>Dental Fillings at Aarthys Dentistry</h2>
       <p>
         At Aarthys Dentistry, we believe in proactive, compassionate care to
@@ -156,12 +156,12 @@
           <div class="footer-section quick-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#testimonials">Testimonials</a></li>
-              <li><a href="#map">Find Us</a></li>
-              <li><a href="#contact">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contact.html">Find Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
-          </div>
+        </div>
         </div>
 
         <!-- Timings and Social Media Section -->
