--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </ul>
             </li>
             <li><a href="#testimonials">Testimonials</a></li>
-            <li><a href="#contact">Contact Us</a></li>
+            <li><a href="contact.html">Contact Us</a></li>
           </ul>
         </nav>
       </div>
@@ -167,12 +167,12 @@
           <div class="footer-section quick-links">
             <h3>Quick Links</h3>
             <ul>
-              <li><a href="#services">Services</a></li>
-              <li><a href="#testimonials">Testimonials</a></li>
-              <li><a href="#map">Find Us</a></li>
-              <li><a href="#contact">Contact Us</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="aboutus.html">About Us</a></li>
+                <li><a href="contact.html">Find Us</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
             </ul>
-          </div>
+        </div>
         </div>
 
         <!-- Second Row -->
